# smtml

./: .coderabbit.yaml  .gitignore  .gitmodules  .ocamlformat  AGENTS.md  CHANGES.md  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  bitvector.opam  cliff.toml  colibri2_mappings.opam  colibri2_mappings.opam.template  dune  dune-project  encoding.opam  encoding.opam.template  flake.nix  release.sh  rules.md  shell.nix  smtml.opam  smtml.opam.template  smtzilla_utils.opam
lib/: ast.ml  ast.mli  axioms.ml  batch.ml  batch.mli  bisect.exclude  bitVector.ml  bitVector.mli  bitwuzla_mappings.default.ml  bitwuzla_mappings.ml  bitwuzla_mappings.mli  bitwuzla_mappings.nop.ml  boolOp.ml  boolean.ml  boolean.mli  bvOp.ml  cache.ml  cache.mli  cache_intf.ml  colibri2_mappings.default.ml  colibri2_mappings.ml  colibri2_mappings.mli  colibri2_mappings.nop.ml  common.ml  common.mli  constructors_intf.ml  ctor_intf.ml  cvc5_mappings.default.ml  cvc5_mappings.ml  cvc5_mappings.mli  cvc5_mappings.nop.ml  dune  eval.ml  eval.mli  eval_numeric.ml  eval_numeric.mli  expr.ml  expr.mli  expression.ml  expression.mli  (+72 more)
lib/axioms/: axioms.ml
lib/constructors/: bitVector.ml  boolean.ml  boolean.mli  integer.ml  integer.mli  real.ml  real.mli  strings.ml  strings.mli
lib/exec/: eval.ml  eval.mli  eval_numeric.ml  eval_numeric.mli  interpret_intf.ml
lib/mappings/: mappings_intf.ml  z3_mappings.ml  z3_mappings.mli
lib/operators/: boolOp.ml  bvOp.ml  floatOp.ml  intOp.ml  strOp.ml
lib/optimizers/: optimizer.ml  optimizer.mli
lib/solvers/: batch.ml  batch.mli  batch_intf.ml  incremental.ml  incremental.mli  incremental_intf.ml  solver_intf.ml
lib/syntax/: ast.ml  expression.ml  model.ml  model.mli  num.ml  symbol.ml  symbol.mli  types.ml  value.ml
lib/text/: lexer.mll  parser.mly
lib/utils/: run.ml
src/: altergo_mappings.default.ml  ast.mli  binder.mli  bisect.exclude  bitwuzla_mappings.default.ml  bitwuzla_mappings.mli  cache.ml  colibri2_mappings.default.ml  colibri2_mappings.mli  compile.ml  compile.mli  cvc5_mappings.default.ml  dolmenexpr_to_expr.ml  dolmenexpr_to_expr.mli  dune  eval.ml  eval.mli  expr.ml  expr.mli  interpret.mli  interpret_intf.ml  log.ml  mappings.ml  mappings.nop.ml  mappings_intf.ml  model.ml  model.mli  num.mli  op_intf.ml  optimizer.ml  optimizer_intf.ml  params.ml  parse.ml  parse.mli  parser.mly  rewrite.ml  smtlib.ml  smtml_prelude.ml  solver.ml  solver_intf.ml  (+7 more)
src/ast/: ast.ml  ast.mli  compile.ml  expr.ml  expr.mli  num.ml  num.mli  rewrite.ml  symbol.ml  symbol.mli  ty.ml  ty.mli  value.ml  value.mli
src/axioms/: axioms.ml
src/bitvector/: bitvector.ml  bitvector.mli  dune
src/interpret/: eval.ml  interpret.ml  interpret_intf.ml
src/parser/: dune  lexer.mll  parse.ml  parse.mli  parser.mly  smtlib.ml
src/smtml/: Expr_raw.ml  altergo_mappings.default.ml  altergo_mappings.mli  ast.ml  ast.mli  base_expr.ml  binder.ml  binder.mli  bitvector.ml  bitvector.mli  bitwuzla_mappings.default.ml  bitwuzla_mappings.mli  build_simplifier.ml  cache.ml  cache.mli  cache_intf.ml  colibri2_mappings.default.ml  colibri2_mappings.mli  compile.ml  compile.mli  constructors_intf.ml  cvc5_mappings.default.ml  cvc5_mappings.mli  dolmenexpr_to_expr.ml  dolmenexpr_to_expr.mli  dune  eval.ml  eval.mli  expr.ml  expr.mli  expr_intf.ml  expr_raw.ml  expr_raw.mli  feature.ml  feature.mli  feature_extraction.ml  feature_extraction.mli  interpret.ml  interpret.mli  interpret_intf.ml  (+62 more)
src/smtml_prelude/: dune  smtml_prelude.ml  string_hash_fallback.ml  string_hash_optimized.ml
src/smtzilla_utils/: dune  feature_map.ml  feature_map.mli  features.ml  features.mli  regression_model.ml  regression_model.mli  requirements.txt  smtzilla.py
src/solvers/: model.ml  model.mli  optimizer.mli  params.ml  params.mli  solver.ml  solver_dispatcher.ml  solver_dispatcher.mli  solver_intf.ml  statistics.ml  statistics.mli
src/std/: std.ml
src/stdlib/: syntax.ml
src/utils/: cache.ml  cache_intf.ml
test/: dune  test_axiom.ml  test_batch.ml  test_bitv.ml  test_bitwuzla.ml  test_bool.ml  test_bools.ml  test_bv.ml  test_colibri2.expected  test_colibri2.ml  test_core.expected  test_core.ml  test_eval.ml  test_eval_numeric.ml  test_f32.ml  test_fp.ml  test_harness.ml  test_int.ml  test_integers.ml  test_lia.expected  test_lia.ml  test_lra.ml  test_optimizer.ml  test_params.ml  test_parser.expected  test_parser.ml  test_qf_bvfp.expected  test_qf_bvfp.ml  test_qf_s.ml  test_real.ml  test_regression.ml  test_solver.ml  test_solver_params.ml  test_str.ml  test_strings.ml  test_z3.ml
test/benchmarks/: dune  test_collections_c.ml
test/bitvector/: dune  test_bitvector.ml
test/fmt/: dune  test_fmt.smtml  test_fmt.t
test/integration/: dune  test_bindings.ml  test_optimizer.ml  test_solver.ml  test_solver_altergo.ml  test_solver_bitwuzla.ml  test_solver_colibri2.ml  test_solver_cvc5.ml  test_solver_z3.ml
test/parser/: dune  test_core.smtml  test_core.t  test_lia.smtml  test_lia.t  test_lra.smtml  test_lra.t  test_qf_fp.smtml  test_qf_fp.t  test_qf_s.smtml  test_qf_s.t
test/regression/: dune  issue_649.ml  test_71.t  test_cvtop.ml  test_fp_get_value.ml  test_issue_183.t  test_issue_654.ml  test_issue_655.ml  test_pr_62.ml  test_pr_71.smtml  test_pr_71.t  test_pr_77.ml  test_pr_90.ml  test_sqrt.smtml  test_sqrt.t
test/run/: dune  test_bv.smtml  test_bv.t  test_core.smtml  test_core.t  test_let.smtml  test_let.t  test_lia.smtml  test_lia.t  test_lra.t  test_qf_fp.smtml  test_qf_fp.t  test_qf_s.smtml  test_qf_s.t
test/smt/: bitv.smt2  fp.smt2
test/smt2/: dune  test_bitv_const.smt2  test_bitv_funs.smt2  test_bitv_simple.smt2  test_core_all.smt2  test_core_binary.smt2  test_core_const.smt2  test_core_true.smt2  test_exists.smt2  test_forall.smt2  test_fp.smt2  test_lia.smt2  test_lra.smt2  test_smt2.t  test_string_all.smt2  test_string_hard.smt2
test/smtml/: dune  test_qf_fp.smtml  test_smtml.t
test/solver/: dune  test_altergo.expected  test_altergo.ml  test_bitwuzla.ml  test_bv.ml  test_colibri2.ml  test_cvc5.ml  test_fp.ml  test_lra.ml  test_optimizer.ml  test_z3.ml  (+10 more)
(+1167 files in other folders)
