(ocamllex
 (modules lexer))

(menhir
 (modules parser))

(library
 (name smtml)
 (public_name smtml)
 (modules
  ast
  bitwuzla_mappings
  ;axioms
  cache
  cache_intf
  constructors_intf
  colibri2_mappings
  eval
  expr
  interpret
  interpret_intf
  lexer
  log
  mappings
  mappings_intf
  model
  num
  op_intf
  optimizer
  parser
  params
  parse
  solver
  solver_intf
  symbol
  ty
  utils
  value
  z3_mappings
  z3_mappings2)
 (private_modules lexer parser)
 (libraries
  hc
  z3
  ocaml_intrinsics
  (select
   colibri2_mappings.ml
   from
   (colibri2.core
    colibri2.solver
    colibri2.theories.bool
    colibri2.theories.quantifiers
    colibri2.theories.LRA
    colibri2.theories.LRA.stages.stage2
    colibri2.theories.fp
    ->
    colibri2_mappings.default.ml)
   (-> colibri2_mappings.nop.ml))
  (select
   bitwuzla_mappings.ml
   from
   (bitwuzla-cxx -> bitwuzla_mappings.default.ml)
   (-> bitwuzla_mappings.nop.ml)))
 (instrumentation
  (backend bisect_ppx --exclusions lib/bisect.exclude)
  (deps bisect.exclude)))

(library
 (wrapped false)
 (name smtml_cvc5)
 (public_name smtml.cvc5)
 (modules cvc5_mappings)
 (libraries smtml cvc5)
 (optional))
