(library
 (name encoding_tests)
 (modules test_harness test_solver_params test_lia)
 (libraries encoding))

(test
 (name test_z3)
 (modules test_z3)
 (libraries encoding encoding_tests))

(test
 (name test_colibri2)
 (modules test_colibri2)
 (libraries encoding_tests encoding.colibri2)
 (build_if %{lib-available:encoding.colibri2}))

(test
 (name test_bitwuzla)
 (modules test_bitwuzla)
 (libraries encoding_tests encoding.bitwuzla)
 (build_if %{lib-available:encoding.bitwuzla}))
