(library
 (name smtml_tests)
 (modules
  test_bv
  test_fp
  test_harness
  test_solver_params
  test_solver
  test_lia)
 (libraries smtml))

(test
 (name test_z3)
 (modules test_z3)
 (libraries smtml smtml_tests))

(test
 (name test_colibri2)
 (modules test_colibri2)
 (libraries smtml_tests)
 (build_if %{lib-available:colibri2.core}))

(test
 (name test_bitwuzla)
 (modules test_bitwuzla)
 (libraries smtml_tests)
 (build_if %{lib-available:bitwuzla-cxx}))
