(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --table))

(library
 (name smtml)
 (public_name smtml)
 (modules
  altergo_mappings
  ast
  bitvector
  bitwuzla_mappings
  binder
  cache
  cache_intf
  colibri2_mappings
  compile
  cvc5_mappings
  dolmenexpr_to_expr
  eval
  expr
  expr_raw
  expr_intf
  feature_extraction
  interpret
  interpret_intf
  lexer
  log
  logic
  mappings
  mappings_intf
  model
  num
  op_intf
  optimizer
  optimizer_intf
  params
  parse
  parser
  ; regression_model
  regression_model_default
  requirements
  rewrite
  smtlib
  smtzilla
  solver
  solver_dispatcher
  solver_intf
  solver_mode
  solver_type
  statistics
  symbol
  ty
  typed
  utils
  value
  z3_mappings)
 (private_modules lexer parser)
 (flags
  (:standard -open Smtml_prelude)
  (:standard -open Smtzilla_utils))
 (libraries
  bos
  cmdliner
  dolmen
  dolmen_type
  dolmen_model
  hc
  fpath
  menhirLib
  ocaml_intrinsics
  scfg
  smtml.prelude
  smtml.smtzilla_utils
  threads
  yojson
  mtime.clock
  zarith
  (select
   colibri2_mappings.ml
   from
   (colibri2.core
    colibri2.solver
    colibri2.theories.bool
    colibri2.theories.quantifiers
    colibri2.theories.LRA
    colibri2.theories.LRA.stages.stage2
    colibri2.theories.fp
    ->
    colibri2_mappings.default.ml)
   (-> colibri2_mappings.nop.ml))
  (select
   bitwuzla_mappings.ml
   from
   (bitwuzla-cxx -> bitwuzla_mappings.default.ml)
   (-> bitwuzla_mappings.nop.ml))
  (select
   z3_mappings.ml
   from
   (z3 -> z3_mappings.default.ml)
   (-> z3_mappings.nop.ml))
  (select
   cvc5_mappings.ml
   from
   (cvc5 -> cvc5_mappings.default.ml)
   (-> cvc5_mappings.nop.ml))
  (select
   altergo_mappings.ml
   from
   (alt-ergo-lib -> altergo_mappings.default.ml)
   (-> altergo_mappings.nop.ml)))
 (instrumentation
  (backend bisect_ppx --exclusions src/smtml/bisect.exclude)
  (deps bisect.exclude))
 (preprocess
  (pps ppx_deriving.std ppx_deriving.show)))

(rule
 (targets
  colibri2_mappings.nop.ml
  bitwuzla_mappings.nop.ml
  cvc5_mappings.nop.ml
  z3_mappings.nop.ml
  altergo_mappings.nop.ml)
 (deps mappings.nop.ml)
 (action
  (progn
   (with-stdout-to
    z3_mappings.nop.ml
    (progn
     (echo "let solver_name = \"Z3\"\n")
     (echo "let solver_package = \"z3\"\n")
     (cat %{deps})))
   (with-stdout-to
    colibri2_mappings.nop.ml
    (progn
     (echo "let solver_name = \"Colibri2\"\n")
     (echo "let solver_package = \"colibri2\"\n")
     (cat %{deps})))
   (with-stdout-to
    bitwuzla_mappings.nop.ml
    (progn
     (echo "let solver_name = \"Bitwuzla\"\n")
     (echo "let solver_package = \"bitwuzla-cxx\"\n")
     (cat %{deps})))
   (with-stdout-to
    cvc5_mappings.nop.ml
    (progn
     (echo "let solver_name = \"cvc5\"\n")
     (echo "let solver_package = solver_name\n")
     (cat %{deps})))
   (with-stdout-to
    altergo_mappings.nop.ml
    (progn
     (echo "let solver_name = \"alt-ergo\"\n")
     (echo "let solver_package = solver_name\n")
     (cat %{deps}))))))

(executable
 (name regression_model_default_gen)
 (modules regression_model_default_gen)
 (libraries smtml.smtzilla_utils))

(rule
 (target regression_model_default.ml)
 (deps ../../misc/model.json)
 (action
  (with-outputs-to
   %{target}
   (run ./regression_model_default_gen.exe))))

(install
 (package smtml)
 (section
  (site
   (smtml data)))
 (files
  (../smtzilla_utils/smtzilla.py as smtzilla.py)))

(rule
 (with-stdout-to
  requirements.ml
  (progn
   (echo "let v = {|")
   (cat ../smtzilla_utils/requirements.txt)
   (echo "|}"))))
